# steel-inventory

./: .gitignore  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  README.md  SDS.md  SRS.md  SUPPLIER_FEATURES.md  SUPPLIER_FEATURES_AUDIT.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-desktop.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tests.rs
src-tauri/src/commands/: auth_commands.rs  backup_commands.rs  category_commands.rs  customer_commands.rs  expense_commands.rs  mod.rs  payment_commands.rs  product_commands.rs  purchase_commands.rs  report_commands.rs  sales_commands.rs  seed_commands.rs  settings_commands.rs  settlement_commands.rs  supplier_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_supplier_product_variants.sql
src-tauri/src/models/: mod.rs
src-tauri/src/services/: auth_service.rs  backup_service.rs  category_service.rs  expense_service.rs  inventory_service.rs  mod.rs  party_service.rs  payment_service.rs  product_service.rs  purchase_service.rs  report_service.rs  sales_service.rs  seed_service.rs  settings_service.rs  settlement_service.rs
src-tauri/src/utils/: audit.rs  dates.rs  errors.rs  mod.rs  money.rs  sku.rs  validation.rs
src/app/: theme.ts
src/components/: MoneyText.tsx  PageHeader.tsx
src/lib/: api.ts  constants.ts  formatters.ts  tauri.ts  (+1 more)
(+24 files in other folders)
